kubectl/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:stable
          securityContext:
            capabilities:
              add:
                - 'CAP_PERFMON'
            privileged: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /config
              name: nfs
              subPath: applications/frigate/volumes/config
            - mountPath: /media/frigate/clips
              name: nfs
              subPath: applications/frigate/volumes/media/frigate/clips
            - mountPath: /media/frigate/recordings
              name: nfs
              subPath: applications/frigate/volumes/media/frigate/recordings
            - mountPath: /media/frigate/exports
              name: nfs
              subPath: applications/frigate/volumes/media/frigate/exports          
            - mountPath: /dev/shm
              name: shm
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-1
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
        - name: shm
          emptyDir:
              medium: Memory
              sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-service-tcp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: frigate
  ports:
    - name: http
      port: 8971
      targetPort: 8971
      protocol: TCP
    - name: internal
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: rtsp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: webrtc
      port: 8555
      targetPort: 8555
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-service-udp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: frigate
  ports:
    - name: webrtc
      port: 8555
      targetPort: 8555
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - frigate.joeberry.org
  rules:
  - host: frigate.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
